# CB2325NumericaG-03-

./: Erro_relativo_e_absoluto_numero.py  Erro_relativo_e_absoluto_numero_fixo_de_precisao.py  Exemplos_de_Erros.ipynb  Exemplos_de_Erros_rel_e_abs.ipynb  Hermite_Interp.py  Interpolação-Polinomial.py  Interpolação_Polinomial.py  README.md  aproximacao_de_raizes.py  exemplo_soma.py  integracao.py  interpolacao.py  pyproject.toml  regressoesaproximacoes.ipynb  test_erros.py  visualizacao_grafica.py
.github/worflows/: publish.yml
CB2325NumericaG3/: aproximacao.py  aproximacao_de_raizes.py  erros.py  integracao.py  interpolacao.py  raizes.py  visualizacao_grafica.py
Pasta_de_Exemplos/: Exemplo_de_Aproximacao.ipynb  Exemplos_de_Erros.ipynb  Exemplos_de_Erros.py  Exemplos_de_Erros_rel_e_abs.py  Exemplos_de_Integracao.ipynb  Exemplos_de_Interpolacao.ipynb  Exemplos_de_Interpolação.ipynb  Exemplos_de_Raizes.ipynb  exemplo_soma.py
tests/: test_Interpolação_Linear.py  test_Interpolação_Polinomial.py  test_aproximacoes.py  test_erros.py  test_hermite_interp.py  test_integracao.py  test_raizes.py  test_soma_de_kahan.py
