[build-system]
requires = ["flit_core>=3.9"]
build-backend = "flit_core.buildapi"

[project]
name = "testes_trab"
version = "0.1.0"
description = "Descrição breve do seu projeto"
authors = [
    { name = "Felipe Ribeiro", email = "al.felipe.mendonca@impatech.edu.br" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/feliperibeiro-impatech/testes_trab"

